# MyPhoneBench

./: .gitignore  README.md
android_world/phoneuse/: app_registry.py  generate_final_trajectories.py  generate_raw_trajectory.py  generate_trajectory.py  run_e2e.py  run_e2e_batch.py  run_e2e_mock.py  run_e2e_simple.py
android_world/phoneuse/agents/: llm_wrapper.py  phoneuse_agent.py  phoneuse_prompt.py
android_world/phoneuse/data/: generate_mbooking_seed.py  generate_mdmv_seed.py  generate_meventbrite_seed.py  generate_mgeico_seed.py  generate_mthumbtack_seed.py  generate_seed_data.py
android_world/phoneuse/data/form_schemas/: mcvspharmacy_booking.json  mzocdoc_booking.json
android_world/phoneuse/mock_apps/: imy_utils.py  mbooking_utils.py  mcvspharmacy_utils.py  mdmv_utils.py  mdoordash_utils.py  meventbrite_utils.py  mgeico_utils.py  mopentable_utils.py  mthumbtack_utils.py  mzillow_utils.py  mzocdoc_utils.py
android_world/phoneuse/privacy/: access_log.py  ask_user_handler.py  profile_manager.py  request_permission_handler.py  save_profile_handler.py  seed_generator.py  user_agent.py
android_world/phoneuse/tasks/: generate_mcvspharmacy_tasks.py  generate_tasks.py  generate_tasks_v2.py  mzocdoc_book_appointment.json  privacy_evaluator.py  review_tasks.py  task_verifier.py  validate_tasks.py
android_world/phoneuse/tasks/generated_mcvspharmacy/: 001_book_flu_shot.json  003_book_health_screening.json  004_book_blood_pressure.json  005_book_strep_test.json  008_book_skin_condition.json  010_tempting_complete_form.json  011_tempting_full_context.json  012_preference_use_low.json  014_vaccination_hoboken.json  (+5 more)
android_world/task_evals/single/: mzocdoc.py
apps/java/com/phoneuse/imy/: AndroidManifest.xml  BUILD.bazel  DATA_LOADING.md  MyApplication.kt  README.md  build_gradle.sh  create_icon.sh  example_data.json  example_data_extended.json  gradle.properties  settings.gradle.kts
apps/java/com/phoneuse/imy/app/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt  build.gradle.kts
apps/java/com/phoneuse/imy/app/res/layout/: activity_main.xml
apps/java/com/phoneuse/imy/app/res/values/: strings.xml
apps/java/com/phoneuse/imy/app/src/main/: AndroidManifest.xml
apps/java/com/phoneuse/imy/app/src/main/kotlin/com/phoneuse/imy/app/: MainActivity.kt
apps/java/com/phoneuse/imy/app/src/main/kotlin/com/phoneuse/imy/data/: DataLoader.kt
apps/java/com/phoneuse/imy/app/src/main/kotlin/com/phoneuse/imy/ui/: ChatbotScreen.kt  IMyApp.kt  PrivacyScreen.kt
apps/java/com/phoneuse/imy/app/src/main/kotlin/com/phoneuse/imy/ui/theme/: Theme.kt
apps/java/com/phoneuse/imy/data/: BUILD.bazel  ProfileDao.kt  ProfileDatabase.kt  ProfileItem.kt
apps/java/com/phoneuse/imy/ui/: BUILD.bazel  ChatbotScreen.kt  IMyApp.kt  PrivacyScreen.kt
docs/: data.json  index.html
evaluation/: aggregate_results.py
scripts/: install_apks.sh  run_benchmark.sh  setup_emulator.sh
(+470 files in other folders)
