# Bazel BUILD file for iMy app
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package_group(
    name = "imy_visibility",
    packages = [
        "//java/com/phoneuse/imy/...",
    ],
)

kt_android_library(
    name = "lib",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["app/res/**"], allow_empty = True),
    srcs = ["MyApplication.kt"],
    custom_package = "com.phoneuse.imy",
    deps = [
        "//java/com/phoneuse/imy/app",
        "//java/com/phoneuse/imy/data",
        "//java/com/phoneuse/imy/ui",
    ],
)

# Builds the .apk of the app
android_binary(
    name = "imyapp",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["app/res/**"], allow_empty = True),
    deps = [
        ":lib",
    ],
)
